wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: labwordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress:5.8.1
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        #Referência do volumes
        volumeMounts:
        - name: wordpress-persistent-storage-lab
          mountPath: /var/www/html
      #Criando volume
      volumes:
      - name: wordpress-persistent-storage-lab
        persistentVolumeClaim:
          claimName: pvc-wordpress
