svc-wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: labwordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  type: LoadBalancer
