ingress-wordpress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: labwordpress
  labels:
    app: wordpress
    tier: frontend
spec:
  rules:
  - host: compasso2.com
    http: 
      paths:
      - backend:
          serviceName: wordpress
          servicePort: 80
